docs: mandate JDK 17 for build stability and resolve Android Gradle Plugin native-access crashes